[package]
name = "mockchain-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix-multipart = "0.7.2"
rand = "0.8"
env_logger = "0.9"
bincode = "1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
tokio = {version = "1.43.0", features = ["macros"] }
futures = "0.3"
litesvm = "0.5.0"
actix-cors = "0.7.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
bigdecimal ={ version = "0.4.7", features = ["serde"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
dotenv = "0.15.0"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.9"
chrono = "0.4"
itertools = "0.14.0"
base64 = "0.22.1"
solana-sdk = {version="=2.1.13", features=["full"]}
solana-rpc-client = "=2.1.13"
solana-compute-budget = "=2.1.13"
solana-program-runtime = "=2.1.13"
solana-program = "=2.1.13"
solana-log-collector = "=2.1.13"
solana-fee = "=2.1.13"
solana-svm = "=2.1.13"
solana-timings = "=2.1.13"
solana-banks-interface = "=2.1.13"
solana-signature = "=2.1.13"
solana-system-program = "=2.1.13"
solana-vote-program = "=2.1.13"
solana-stake-program = "=2.1.13"
solana-config-program = "=2.1.13"
solana-bpf-loader-program = "=2.1.13"
solana-compute-budget-program = "=2.1.13"
solana-address-lookup-table-program = "=2.1.13"
solana-transaction-status-client-types = "=2.1.13"
solana-account-decoder-client-types = "=2.1.13"
solana-metrics = "=2.1.13"
solana-rpc-client-api = "=2.1.13"
solana-account-decoder = "=2.1.13"
solana-zk-token-sdk = "=2.1.13"
solana-zk-token-proof-program = "=2.1.13"
solana-zk-elgamal-proof-program = "=2.1.13"
solana-transaction-status = "=2.1.13"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
hex = "0.4.3"
rayon = "1.8"
redis = "0.20" 
r2d2_redis = "0.14.0"
rdkafka = "0.37.0"
jsonrpc-core = "18.0.0"